# setenv

./: .ghci  configure.ac  setenv.cabal
cbits/: SetEnv.c
include/: HsBase.h
src/System/: Environment.hs  SetEnv.hs
test/System/: SetEnvSpec.hs
